tests/assets/www/1.1/errors/unexpected.json.php
<?php

header('Content-Type: application/json; charset=UTF-8', true, 400);

?>
{
    "success":"This is fake"
}
